k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maison-epouvante-back
  namespace: maison-epouvante
spec:
  selector:
    app: maison-epouvante-back
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
